# Copyright (C) 2007-2013  CEA/DEN, EDF R&D, OPEN CASCADE
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
#
# See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
#

include $(top_srcdir)/adm_local/unix/make_common_starter.am

EXTRA_DIST += \
    FIELDcreate.cxx \
    FIELDcreate.py \
    FIELDgeneral.cxx \
    FIELDgeneral.py \
    HOWTO_Create_A_New_Driver.txt \
    MEDMEM_InvokingDriverAtObjectCreationTime.cxx \
    MEDMEM_InvokingDriverAtObjectCreationTime.py \
    MEDMEM_InvokingDriverByAttachingItToAnObject.cxx \
    MEDMEM_InvokingDriverByAttachingItToAnObject.py \
    MEDMEM_InvokingDriverFromStandardObjectMethod.cxx \
    MEDMEM_InvokingDriverFromStandardObjectMethod.py \
    MEDMEM_UsersGuide.lyx \
    MESHconnectivities.cxx \
    MESHconnectivities.py \
    MESHcoordinates.cxx \
    MESHcoordinates.py \
    MESHgeneral.cxx \
    MESHgeneral.py \
    MESHINGexample.cxx \
    MESHINGexample.py \
    TODO_Drivers.txt
